--- a/index.html
+++ b/index.html
@@ -9,6 +9,30 @@
     <title>Rock, paper and scissor</title>
 </head>
 <body>
-    
+    <div class="container">
+        <h1>Rock, paper and scissor</h1>
+        <div class="choices">
+            <h3 id="player-choice">Your choice: Rock</h3>
+            <h3 id="cpu-choice">Computer's choice: Paper </h3>
+            <h3 id="result">Winner: Computer</h3>
+        </div>
+        <div class="buttons">
+            <button class="btns">
+                <i class="fas fa-hand-rock"></i>
+                Rock
+            </button>
+            <button class="btns">
+                <i class="fas fa-hand-paper"></i>
+                Paper
+            </button>
+            <button class="btns">
+                <i class="fas fa-hand-scissors"></i>
+                Scissor
+            </button>
+        </div>
+        <div class="footer show-footer">
+            <h3 id="rules">View rules</h3>
+        </div>
+    </div>
 </body>
 </html>
