Add id title in h1 and add score in HTML

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 </head>
 <body>
     <div class="container">
-        <h1>Rock, paper and scissor</h1>
+        <h1 id="title">Rock, paper and scissor</h1>
+        <h2 id="score">Your score: 0</h2>
         <div class="choices">
             <h3 id="player-choice">Your choice: Rock</h3>
             <h3 id="cpu-choice">Computer's choice: Paper </h3>
