Added game's rules

--- a/index.html
+++ b/index.html
@@ -32,7 +32,13 @@
             </button>
         </div>
         <div class="footer show-footer">
-            <h3 id="rules">View rules</h3>
+            <h3 id="rules">View rules:</h3>
+            <ul>
+                <li>Papers wins rock</li>
+                <li>Rock wins scissors</li>
+                <li>Scissors wins paper</li>
+                <li>If the choices is the same, draw game</li>
+            </ul>
         </div>
     </div>
 </body>
