--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
             <h3 id="result">Winner: Computer</h3>
         </div>
         <div class="buttons">
-            <button class="btns">
+            <button class="btns" id="rock-btn">
                 <i class="fas fa-hand-rock"></i>
                 Rock
             </button>
-            <button class="btns">
+            <button class="btns" id="paper-btn">
                 <i class="fas fa-hand-paper"></i>
                 Paper
             </button>
-            <button class="btns">
+            <button class="btns" id="scissor">
                 <i class="fas fa-hand-scissors"></i>
                 Scissor
             </button>
