Rules buttom and query selector in js

--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
                 <i class="fas fa-hand-paper"></i>
                 Paper
             </button>
-            <button class="btns" id="scissor">
+            <button class="btns" id="scissor-btn">
                 <i class="fas fa-hand-scissors"></i>
                 Scissor
             </button>
         </div>
         <div class="footer show-footer">
-            <h3 id="rules">View rules:</h3>
-            <ul>
+            <button id="rules-btn">View rules:</button>
+            <ul class="rules-description">
                 <li>Papers wins rock</li>
                 <li>Rock wins scissors</li>
                 <li>Scissors wins paper</li>
