New game and rules buttom added in HTML

--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
                 Scissor
             </button>
         </div>
+        <div class="footer">
+            <button id="restart-game">New Game</button>
+            <button id ="rules">Rules</button>
+        </div>
     </div>
 </body>
 </html>
