Rules buttom added again

--- a/index.html
+++ b/index.html
@@ -33,6 +33,12 @@
         </div>
         <div class="footer">
             <button id="restart-game">New Game</button>
+            <button class="rules">Rules</button>
+            <ul class="rules-description show-rules">
+                <li>Rock wins scissor</li>
+                <li>Scissor wins paper</li>
+                <li>Paper wins rock</li>
+            </ul>
         </div>
     </div>
 </body>
