--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <div class="container">
         <h1 id="title">Rock, paper and scissor</h1>
         <h2 id="score">Your score: 0</h2>
+        <h2 id="cpu-score">Computer's score: 0</h2>
         <div class="choices">
             <h3 id="player-choice">Your choice: Rock</h3>
             <h3 id="cpu-choice">Computer's choice: Paper </h3>
