--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
 </head>
 <body>
     <div class="container">
-        <h1 id="title">Rock, paper and scissor</h1>
+      <div class="title">
+          <h1 class="fas fa-hand-rock"></h1>
+          <h1 class="fas fa-hand-paper"></h1>
+          <h1 class="fas fa-hand-scissors"></h1>
+        </div>
         <h2 id="score">Your score: 0</h2>
         <h2 id="cpu-score">Computer's score: 0</h2>
         <div class="choices">
